--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <img src="midnights.jpg" alt="Cover Art 4" class="cover-art">
                 <button>Midnights</button>
             </div>
-            <div class="button-item" onclick="goToLink('https://www.link5.com')">
+            <div class="button-item" onclick="goToLink('https://moinyesin.github.io/ts_reputation_player/')">
                 <img src="reputation.jpg" alt="Cover Art 5" class="cover-art">
                 <button>Reputation</button>
             </div>
