--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
     <section>
         <div class="card">
-            <h3>Select One album or Shuffle All</h3>
-            <div class="button-item" onclick="goToLink('https://www.link1.com')">
+            <h3>Select One Album or Shuffle All</h3>
+            <div class="button-item" onclick="goToLink('https://moinyesin.github.io/ts_shuffle_player/')">
                 <img src="shuffle-all.jpeg" alt="Cover Art 1" class="cover-art" height="200px" width="200px">
                 <button>Shuffle These Albums</button>
             </div>
@@ -27,7 +27,7 @@
                 <img src="1989TV.webp" alt="Cover Art 3" class="cover-art">
                 <button>1989 (TV)</button>
             </div>
-            <div class="button-item" onclick="goToLink('https://www.link4.com')">
+            <div class="button-item" onclick="goToLink('https://moinyesin.github.io/ts_midnights_player')">
                 <img src="midnights.jpg" alt="Cover Art 4" class="cover-art">
                 <button>Midnights</button>
             </div>
